// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerModal should be rendered correctly 1`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-modal={true}
      className="uui-modal-window modal width-600 height-700 container"
      role="modal"
    >
      <div
        className="root size-36 background-none padding-24 vPadding-12 border-bottom-gray40 spacing-12 modalHeader container align-items-center"
      >
        <div
          className="root font-sans-semibold text-color-gray80 line-height-24 font-size-18 v-padding-12 container"
        >
          Please select
        </div>
        <div
          className="flexSpacer"
        />
        <div
          className="flexCell"
          onClick={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "auto",
              "flexGrow": undefined,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <button
            className="container uui-button-box uui-enabled -clickable root icon-color-gray60"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
                height={24}
                viewBox="0 0 12 24"
                width={12}
              >
                <use
                  xlinkHref="#navigation-close-24.svg"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        className="flexCell subHeaderWrapper"
        onClick={[Function]}
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "0",
            "flexGrow": undefined,
            "flexShrink": undefined,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <div
          className="root size-36 background-none vPadding-24 container align-items-center"
        >
          <div
            className="container uui-input-box -clickable root size-36 mode-form"
            onBlur={[Function]}
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
                height={24}
                viewBox="0 0 12 24"
                width={12}
              >
                <use
                  xlinkHref="#search-18.svg"
                />
              </svg>
            </div>
            <input
              aria-invalid={false}
              autoFocus={true}
              className="uui-input"
              inputMode="search"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Type text for quick search"
              type="search"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="root size-36 background-white body modal container align-items-center"
        style={
          Object {
            "maxHeight": undefined,
          }
        }
      >
        <div
          className="wrapper root"
        >
          <div
            className="body"
            style={
              Object {
                "display": "flex",
                "height": "auto",
                "maxHeight": 100500,
                "minHeight": 0,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "bottom": undefined,
                  "flex": "1 1 auto",
                  "left": undefined,
                  "marginBottom": 0,
                  "marginRight": 0,
                  "maxHeight": 100500,
                  "minHeight": 0,
                  "overflow": "scroll",
                  "position": "relative",
                  "right": undefined,
                  "top": undefined,
                }
              }
            >
              <div
                className="listContainer"
                style={
                  Object {
                    "marginTop": 0,
                    "minHeight": "0px",
                  }
                }
              >
                <div
                  aria-posinset={1}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={2}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={3}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={4}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={5}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={6}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={7}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={8}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={9}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={10}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-posinset={11}
                  aria-selected={false}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="uui-track-horizontal"
              style={
                Object {
                  "display": "none",
                  "height": 6,
                  "position": "absolute",
                }
              }
            >
              <div
                className="uui-thumb-horizontal"
              />
            </div>
            <div
              className="uui-track-vertical"
              style={
                Object {
                  "display": "none",
                  "position": "absolute",
                  "width": 6,
                }
              }
            >
              <div
                className="uui-thumb-vertical"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="root size-36 background-none padding-24 vPadding-24 spacing-12 modalFooter borderTop container align-items-center"
      >
        <div
          className="flexSpacer"
        />
        <button
          className="container uui-button-box uui-enabled -clickable button-color-gray50 root size-36 fill-white"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="uui-caption"
          >
            Cancel
          </div>
        </button>
        <button
          className="container uui-button-box uui-enabled -clickable button-color-green root size-36 fill-solid"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="uui-caption"
          >
            Select
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</div>
`;

exports[`PickerModal should be rendered correctly 2`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-modal={true}
      className="uui-modal-window modal width-600 height-700 container"
      role="modal"
    >
      <div
        className="root size-36 background-none padding-24 vPadding-12 border-bottom-gray40 spacing-12 modalHeader container align-items-center"
      >
        <div
          className="root font-sans-semibold text-color-gray80 line-height-24 font-size-18 v-padding-12 container"
        >
          Please select
        </div>
        <div
          className="flexSpacer"
        />
        <div
          className="flexCell"
          onClick={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "auto",
              "flexGrow": undefined,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <button
            className="container uui-button-box uui-enabled -clickable root icon-color-gray60"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
                height={24}
                viewBox="0 0 12 24"
                width={12}
              >
                <use
                  xlinkHref="#navigation-close-24.svg"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        className="flexCell subHeaderWrapper"
        onClick={[Function]}
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "0",
            "flexGrow": undefined,
            "flexShrink": undefined,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <div
          className="root size-36 background-none vPadding-24 container align-items-center"
        >
          <div
            className="container uui-input-box -clickable root size-36 mode-form"
            onBlur={[Function]}
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
                height={24}
                viewBox="0 0 12 24"
                width={12}
              >
                <use
                  xlinkHref="#search-18.svg"
                />
              </svg>
            </div>
            <input
              aria-invalid={false}
              autoFocus={true}
              className="uui-input"
              inputMode="search"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Type text for quick search"
              type="search"
              value=""
            />
          </div>
        </div>
        <label
          className="container root size-18 switch uui-disabled"
        >
          <div
            className="uui-switch-body"
          >
            <input
              aria-checked={false}
              aria-disabled={true}
              disabled={true}
              onChange={[Function]}
              role="switch"
              type="checkbox"
            />
            <div
              className="uui-switch-toggler"
            />
          </div>
          <div
            className="uui-input-label"
          >
            Show only selected
          </div>
        </label>
      </div>
      <div
        className="root size-36 background-white body modal container align-items-center"
        style={
          Object {
            "maxHeight": undefined,
          }
        }
      >
        <div
          className="wrapper root"
        >
          <div
            className="body"
            style={
              Object {
                "display": "flex",
                "height": "auto",
                "maxHeight": 100500,
                "minHeight": 0,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "bottom": undefined,
                  "flex": "1 1 auto",
                  "left": undefined,
                  "marginBottom": 0,
                  "marginRight": 0,
                  "maxHeight": 100500,
                  "minHeight": 0,
                  "overflow": "scroll",
                  "position": "relative",
                  "right": undefined,
                  "top": undefined,
                }
              }
            >
              <div
                className="listContainer"
                style={
                  Object {
                    "marginTop": 0,
                    "minHeight": "0px",
                  }
                }
              >
                <div
                  aria-checked={false}
                  aria-posinset={1}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        C2
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={2}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        C1+
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={3}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        C1
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={4}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        B2+
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={5}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        B2
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={6}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        B1+
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={7}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        B1
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={8}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        A2+
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={9}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        A2
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={10}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        A1+
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-checked={false}
                  aria-posinset={11}
                  className="pickerRow container -clickable align-items-center"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24 align-widgets-top"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <label
                      className="container root size-18 checkbox-color-blue checkbox -clickable"
                    >
                      <div
                        className="uui-checkbox"
                      >
                        <input
                          aria-checked={false}
                          checked={false}
                          onChange={[Function]}
                          tabIndex={-1}
                          type="checkbox"
                        />
                      </div>
                    </label>
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-18 font-size-14 v-padding-9 container"
                      >
                        A1
                      </div>
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="uui-track-horizontal"
              style={
                Object {
                  "display": "none",
                  "height": 6,
                  "position": "absolute",
                }
              }
            >
              <div
                className="uui-thumb-horizontal"
              />
            </div>
            <div
              className="uui-track-vertical"
              style={
                Object {
                  "display": "none",
                  "position": "absolute",
                  "width": 6,
                }
              }
            >
              <div
                className="uui-thumb-vertical"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="root size-36 background-none padding-24 vPadding-24 spacing-12 modalFooter borderTop container align-items-center"
      >
        <button
          className="container uui-button-box uui-enabled -clickable root size-36 linkButton-color-blue uui-no-left-icon uui-no-right-icon"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="uui-caption"
          >
            SELECT ALL
          </div>
        </button>
        <div
          className="flexSpacer"
        />
        <button
          className="container uui-button-box uui-enabled -clickable button-color-gray50 root size-36 fill-white"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="uui-caption"
          >
            Cancel
          </div>
        </button>
        <button
          className="container uui-button-box uui-enabled -clickable button-color-green root size-36 fill-solid"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="uui-caption"
          >
            Select
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</div>
`;
